add test user service create success method